[package]
name = "json_against_humanity"
version = "0.1.0"
authors = ["Isaac Mills <rooster0055@protonamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bincode = "*"
anyhow = "*"
rayon = "*"
brotli2 = "*"
strip_markdown = "*"
jemallocator = "*"
